--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-.xdebug-error {
-    color: black;
-}
-
-
 :root {
     --background: #1E212B;
     --yellow: #FFAE00;
@@ -1062,8 +1057,11 @@ footer a {
 
 .escapeImgDivUploadCover {
     justify-self: center;
-    width: 50%;
     margin-bottom: 5%
+}
+
+.escapeImgDivUploadCover img {
+    width: 50%;
 }
 
 .difficultyAdmin {
